# PyGRANSO

./: .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  LICENSE  OPTIMIZATIONS_APPLIED.md  OPTIMIZATION_GUIDE_CPU_QP.md  PR_DESCRIPTION.md  README.md  RELEASE_CHECKLIST_2.0.md  TODO-PyGRANSO.txt  dbg_print.py  environment.yml  environment_cpu.yml  environment_cuda.yml  environment_cuda_win10.yml  environment_linux.yml  environment_windows.yml  granso.m  gransoOptions.m  gransoOptionsAdvanced.m  inequalityConstraint.m  inequalityConstraint_matrix.m  inequalityConstraint_matrix.m~  main.py  mat2vec.m  matrixSolver.m~  my_ex1_rosenbrock.ipynb  my_ex6_perceptual_attack.ipynb  ncvx.py  ncvxOptions.py  ncvxOptionsAdvanced.py  ncvxStruct.py  objectiveFunction.m  objectiveFunction.m~  objectiveFunction_matrix.m~  pygranso.py  pygransoOptions.py  pygransoOptionsAdvanced.py  pygransoOptionsAvanced.py  (+12 more)
ICML_examples/: 1.l1_logistic_regression.ipynb  2.GenericDictLearning.ipynb  3.demo_UnconstrainedDL.ipynb
LICENSE_INFO/: readme.txt
MATLAB_version/: CHANGELOG.md  code.ini  granso.m  mat2vec.m
Python_version/: README.md  mat2vec.py  pygranso.py  pygransoOptions.py  pygransoOptionsAvanced.py  pygransoStruct.py
cuda_examples/: A1_rosenbrock_cpu_cuda_test.ipynb  A2_eigenval_opt_cpu_cuda_test.ipynb  A3_dict_learning_cpu_cuda_test.ipynb  B1_nonlinear_feasiblity_cpu_cuda_test.ipynb  B2_sphere_manifold_cpu_cuda_test.ipynb  B3_trace_optimization_cpu_cuda_test.ipynb  C1_robustPCA_cpu_cuda_test.ipynb  C2_generalizedLASSO_cpu_cuda_test.ipynb  C3_logistic_regression_cpu_cuda_test.ipynb  D1_LeNet5_cpu_cuda_test.ipynb  D2_perceptual_attack_cpu_cuda_test.ipynb  D3_orthogonal_rnn_cpu_cuda_test.ipynb  README.md
docs/: MIXED_PRECISION.md  TORCH_COMPILE.md  UNCONSTRAINED_AND_OSQP.md  index.rst  install.rst  intro.rst  settings.rst
examples/: 1.demo_Rosenbrock.ipynb  10.demo_sphere_manifold.ipynb  2.demo_EigenvalOpt.ipynb  2.demo_SpectralRadiusOpt.ipynb  3.demo_DictLearning.ipynb  4.demo_RobustPCA.ipynb  5.demo_GeneralizedLASSO.ipynb  6.demo_OrthogonalRNN.ipynb  6.demo_PerceptualAttack.ipynb  7.demo_OrthogonalRNN.ipynb  7.demo_PerceptualAttack.ipynb  7.demo_UnconstrainedDL.ipynb  8.demo_UnconstrainedDL.ipynb  8.demo_nonlinear_feasiblity.ipynb  9.demo_nonlinear_feasiblity.ipynb  9.demo_sphere_manifold.ipynb  A1_rosenbrock-Copy1.ipynb  A1_rosenbrock-Copy2.ipynb  A1_rosenbrock.ipynb  A1_rosenbrock_cpu_cuda_test.ipynb  A2_eigenval_opt.ipynb  A2_eigenval_opt_cpu_cuda_test.ipynb  A3_dict_learning.ipynb  A3_dict_learning_cpu_cuda_test.ipynb  B1_nonlinear_feasiblity.ipynb  B2_sphere_manifold.ipynb  (+41 more)
(+646 files in other folders)
